# project_board

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  loki-config.yaml  prometheus.yml  pyproject.toml  test_dump.sql
src/: .env-example  pytest.ini
src/accounts/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_users_division_users_notification_users_number_phone_and_more.py  0003_alter_users_notification.py  0004_alter_users_number_phone_verificationcode.py  0005_delete_verificationcode.py  0006_verificationcode.py  0007_alter_users_email.py
src/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/api/management/commands/: warmup.py
src/api/migrations/: 0001_initial.py  0002_board_api_board_status_6930f6_idx_and_more.py  0002_project_members_project_owner.py  0003_board_description_alter_additionaltask_description_and_more.py  0004_taskrelation.py  0005_alter_projectmembership_project_and_more.py  0006_remove_project_members_project_members.py  0007_remove_project_members_project_members.py  0008_remove_project_members_project_members.py
src/config/: celery.py  settings.py  urls.py
src/config/settings/: base.py  production.py  test.py
src/tests/: test_view.py
